log
Thu 14 Sep 2023 07:15:40 PM UTC: 
 tests:  1|8
total_score: 0/70
3f447ab
Thu 14 Sep 2023 07:24:18 PM UTC: 
 treemap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:55: error: expected ‘)’ before ‘;’ token
   42 |     TreeMap * map = (TreeMap *) malloc(sizeof(TreeMap);
      |                                       ~               ^
      |                                                       )
treemap.c:47:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   47 | }
      | ^
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
In file included from test.c:4:
treemap.c:42:15: error: unused variable ‘map’ [-Werror=unused-variable]
   42 |     TreeMap * map = (TreeMap *) malloc(sizeof(TreeMap);
      |               ^~~
test.c:607: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
272f170
Thu 14 Sep 2023 07:24:31 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
9403fa0
Thu 14 Sep 2023 07:30:19 PM UTC: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:77:5: error: expected expression before ‘return’
   77 |     return NULL;
      |     ^~~~~~
treemap.c:76:13: error: unused variable ‘nodo’ [-Werror=unused-variable]
   76 |   TreeNode* nodo =
      |             ^~~~
treemap.c:78:1: error: control reaches end of non-void function [-Werror=return-type]
   78 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9cd54f2
Thu 14 Sep 2023 07:45:12 PM UTC: 
 treemap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:44:18: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   44 |     map->current = -1;
      |                  ^
treemap.c: In function ‘searchTreeMap’:
treemap.c:78:42: error: array subscript is not an integer
   78 |       if(nodo->pair != NULL && nodo->pair[tree->current]->key) {
      |                                          ^
treemap.c:80:26: error: array subscript is not an integer
   80 |         return nodo->pair[tree->current];
      |                          ^
cc1: all warnings being treated as errors
Compilation failed
9119581
Thu 14 Sep 2023 07:45:28 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:78:42: error: array subscript is not an integer
   78 |       if(nodo->pair != NULL && nodo->pair[tree->current]->key) {
      |                                          ^
treemap.c:80:26: error: array subscript is not an integer
   80 |         return nodo->pair[tree->current];
      |                          ^
Compilation failed
d4063c6
Thu 14 Sep 2023 07:52:06 PM UTC: 
 treemap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:83:28: error: invalid type argument of ‘->’ (have ‘Pair’)
   83 |       if(nodo->pair[indice]->key && strcmp(nodo->pair[indice]->key, key) == 0) {
      |                            ^~
treemap.c:83:62: error: invalid type argument of ‘->’ (have ‘Pair’)
   83 |       if(nodo->pair[indice]->key && strcmp(nodo->pair[indice]->key, key) == 0) {
      |                                                              ^~
treemap.c:85:26: error: array subscript is not an integer
   85 |         return nodo->pair[tree->current];
      |                          ^
Compilation failed
d4f6b3a
Thu 14 Sep 2023 07:52:37 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:83:28: error: invalid type argument of ‘->’ (have ‘Pair’)
   83 |       if(nodo->pair[indice]->key && strcmp(nodo->pair[indice]->key, key) == 0) {
      |                            ^~
treemap.c:83:62: error: invalid type argument of ‘->’ (have ‘Pair’)
   83 |       if(nodo->pair[indice]->key && strcmp(nodo->pair[indice]->key, key) == 0) {
      |                                                              ^~
treemap.c:85:26: error: incompatible types when returning type ‘Pair’ but ‘Pair *’ was expected
   85 |         return nodo->pair[indice];
      |                ~~~~~~~~~~^~~~~~~~
Compilation failed
1b8f2a7
Thu 14 Sep 2023 07:53:22 PM UTC: 
 treemap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:82:20: error: array subscript is not an integer
   82 |       if(nodo->pair[tree->current]->key && strcmp(nodo->pair[tree->current]->key, key) == 0) {
      |                    ^
treemap.c:82:61: error: array subscript is not an integer
   82 |       if(nodo->pair[tree->current]->key && strcmp(nodo->pair[tree->current]->key, key) == 0) {
      |                                                             ^
treemap.c:84:26: error: array subscript is not an integer
   84 |         return nodo->pair[tree->current];
      |                          ^
Compilation failed
b90a981
Thu 14 Sep 2023 08:00:49 PM UTC: 
 treemap.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
 tests:  0|0
236a3c4
